# django-5.0-template

./: .gitignore  README.md  pyproject.toml
love_api/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
