[project]
name = "love_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "whitek", email = "likeccpo@gmail.com"},
]
dependencies = [
    "django>=5.0.4",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "uvicorn>=0.29.0",
    "djangorestframework>=3.15.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
createsuperuser = "python manage.py createsuperuser"
startapp = "python manage.py startapp"
